# sVanilla

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci-release.yml
cmake/: sVanillaInfo.wsi.in  terminate_process.cmake  wix.cmake
overlay/ports/vanillastyle/: portfile.cmake
sVanilla/resource/: sVanilla.qrc
sVanilla/resource/style/: dark.json  light.json
sVanilla/src/: CMakeLists.txt
sVanilla/src/Aria2Net/: CMakeLists.txt
sVanilla/src/BaseQt/: CMakeLists.txt
sVanilla/src/BiliApi/: BilibiliClient.cpp  CMakeLists.txt
sVanilla/src/ClientUi/: CMakeLists.txt  main.cpp
sVanilla/src/Download/: BiliDownloader.cpp  CMakeLists.txt  DownloadStatusThread.cpp
sVanilla/src/FFmpeg/: CMakeLists.txt  FFmpegHelper.cpp  FFmpegHelper.h
sVanilla/src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerConfig.h
sVanilla/src/Login/: BiliLogin.cpp  BiliLogin.h  CMakeLists.txt  login.h
sVanilla/src/NetWork/: CMakeLists.txt
sVanilla/src/Plugin/: CMakeLists.txt  DynamicLibLoader.cpp  PluginManager.cpp  PluginManager.h
sVanilla/src/SUI/: AddLinkLineEdit.cpp  CMakeLists.txt
scripts/: clang_format_all.py  collection_pdb.py  generator_qrc.py  generator_wxs.py  sVanilla.wxs  ui.wxs
scripts/inno_setup/: installer.iss
scripts/wix/: sVanilla.wxs
test/: CMakeLists.txt
test/Aria2Net/: CMakeLists.txt
test/BiliApi/: CMakeLists.txt
test/Download/: CMakeLists.txt
test/FFmpeg/: CMakeLists.txt
test/NetWork/: CMakeLists.txt
test/SQLite/: CMakeLists.txt
test/ThreadPool/: CMakeLists.txt
test/Zipper/: CMakeLists.txt  zipper_test.cpp
(+87 files in other folders)
